// Source: Gacha.proto
// Tool: OverfieldTool

syntax = "proto3";

option go_package = "./;excel";
package excel;

message AllGachaDatas {
  GachaInfoDatas Info = 1;
  GachaPoolDatas Pool = 2;
  GachaRewardPoolDatas RewardPool = 3;
}

message GachaInfoDatas {
  repeated GachaInfoConfigure Datas = 1;
}

message GachaInfoConfigure {
  int32 ID = 1;
  int32 Index = 2;
  string OpeningTime = 3;
  string ClosingTime = 4;
  int32 TextID = 5;
  int32 IconID = 6;
  bool IsFree = 7;
  int32 Method1ID = 8;
  int32 ConsumeItem1ID = 9;
  int32 Method1Count = 10;
  int32 ConsumeItem1Num = 11;
  int32 ConsumeItem2ID = 12;
  int32 Method2Count = 13;
  int32 ConsumeItem2Num = 14;
  int32 MaxTimes = 15;
  int32 CharacterID1 = 16;
  int32 CharacterID2 = 17;
  int32 CharacterID3 = 18;
  int32 VideoID1 = 19;
  int32 VideoID2 = 20;
  int32 VideoID3 = 21;
  int32 PracticeCharacterID1 = 22;
  int32 PracticeCharacterID2 = 23;
  int32 PracticeCharacterID3 = 24;
  int32 OptionalNum = 25;
  int32 OptionalPoolID = 26;
  int32 BigGuaranteePoolID = 27;
  int32 NewUIGachaType = 28;
  int32 NewShowType = 29;
}

message GachaPoolDatas {
  repeated GachaPoolConfigure Datas = 1;
}

message GachaPoolConfigure {
  int32 ID = 1;
  repeated GachaPoolItem Items = 2;
}

message GachaPoolItem {
  int32 FreeGachaPoolID = 1;
}

message GachaRewardPoolDatas {
  repeated GachaRewardPoolConfigure Datas = 1;
}

message GachaRewardPoolConfigure {
  int32 ID = 1;
  repeated GachaRewardPoolItem Items = 2;
}

message GachaRewardPoolItem {
  int32 ItemID = 1;
  bool IsOptional = 2;
  string OpeningTime = 3;
  string ClosingTime = 4;
}
